# 241-353.nongpla

./: pyproject.toml
ML/SARIMA/: SARIMA_arl.ipynb  SARIMA_blue.ipynb  SARIMA_bts.ipynb  SARIMA_pink.ipynb  SARIMA_red.ipynb  SARIMA_yellow.ipynb  sarima_arl_predictions.csv
ML/SARIMAX/: model.ipynb
ML/XGBoost/: train_pink_multivariate.ipynb  xgboost_forecast_30days.ipynb  xgboost_pink_line_30day_forecast.csv  xgboost_pink_line_30day_forecast_summary.csv  xgboost_test_results_comparison.csv
data/: augmented_baseline.csv  augmented_data.csv  baseline.csv  daily_transport_rail_with_special_day.csv  data_adjustmented.csv  data_demo.csv
db_mock/: .cache.sqlite  API_MOT.ipynb  create_baseline.ipynb  day_type_collecting_functional.py  day_type_mapping_sep2025.csv  docker-compose.yml  mot_collecting_fucntional.py  rain_collecting_functional.py  rain_data_bangkok_summary.csv  ssh_git_clone.txt  tables.py
db_mock/bring_into_clonefolder/: day_type_collecting.py  mot_collecting.py  rain_collecting.py  read_chan.txt  weekly_data_collecting copy.py
sources/calendar/: myhora-holiday-calendar-2563.csv  myhora-holiday-calendar-2564.csv  myhora-holiday-calendar-2565.csv  myhora-holiday-calendar-2566.csv  myhora-holiday-calendar-2567.csv  myhora-holiday-calendar-2568.csv  special_days_2020_2025.csv
sources/transportation/: daily_transport_rail.csv  passengers68.xlsx  (+1 more)
utils/: API_test.ipynb  calendar_ingestion.ipynb  concat_source.ipynb  daily_transport_rail.ipynb  data_adjustment.ipynb  day_mapping.ipynb  scarping_population.ipynb  scraping_calendar.ipynb  visualize_demo.ipynb
(+758 files in other folders)
